style: ensure black background when on mobile devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 
 :root {
   font-size: 16px !important;
+  background-color: #000 !important;
 }
 
 body {
